--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mohamed-safouen.github.io/Coursera",
+  "homepage": "https://mohamed-safouen.github.io",
   "name": "coursera",
   "version": "0.1.0",
   "private": true,
