--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "name": "coursera",
+  "name": "Little Lemon Restaurant",
   "homepage": "https://mohamed-safouen.github.io",
   "version": "0.1.0",
   "private": true,
