(web/Little Lemon Restaurant):test Change router

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Little Lemon Restaurant",
-  "homepage": "https://mohamed-safouen.github.io",
+  "homepage": "https://mohamed-safouen.github.io/Coursera",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
