fix(web/Little Lemon Restaurant):Change The name of site

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Little Lemon Restaurant",
-  "homepage": "https://mohamed-safouen.github.io/Coursera",
+  "homepage": "https://mohamed-safouen.github.io/Little-Limon-Restaurant",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
